// Bidirectional stream rpc

syntax = "proto3"; // Make sure to have proto3 for your proto files.

// generate separate or multiple java file for each generated class.
option java_multiple_files = true;
// Package inside the src/main/java where generated classes will reside.
option java_package = "grpc.services.sales_department_service";
// Class name of the wrapper class which represent this file.
option java_outer_classname = "HRDepartmentServiceImpl";

// package name to avoid name collisions
package office_service;

// Interface exported by the server.
service SalesDepartmentService {
  // rpc method for bidirectional streaming calls
  rpc check_stock (Stock_Request) returns (Stock_Response) {}
  rpc order_confirmation (stream Order_Request) returns (stream Order_Response) {}
}

// define each variable in rpc method separately

message Stock_Request {
  string stock_request = 1;
}

message Stock_Response {
  string Stock_response = 1;
}
message Order_Request {
  string delivery_area = 1;
  string product_name = 2;
  int32 product_quantity = 3;
}

message Order_Response {
  string order_response_message = 1;
  string order_confirmation = 2;
}
